# NightForge

./: .env.sample  .gitignore  BUILD.md  LICENSE  README.md  app-concept-py.md  app-concept.md  overview.md
backlog/: -this.md  01 security MOV.md  agent-self-added-features.md  capability-floor.md  curriculum-tracking.md  human-approval-mode.md  language-and-runtime-change.md  multi-model-routing.md  production-service-mode.md  provenance-tagged-memory.md  reflection-self-critique.md  web-tooling-backlog.md
py-1/: .env.sample  .gitignore  AGENT.md  BUILD.md  README.md  dev-config.yml  idea-py.md  user-config.yml
py-1/data/db/: index.md  roadmap.md
py-1/src/: __init__.py  agent.py  agent_tools.py  config.yml  memory.py  pyproject.toml  registry.py
py-1/src/providers/: __init__.py  openrouter.py
py-1/src/tests/: test_memory.py  test_openrouter.py  test_registry.py
py-1/src/tools/: __init__.py  etiquette.py
py-1/src/tools/fetch/: __init__.py  jina.py
py-1/src/tools/search/: __init__.py  exa.py  tavily.py
py-1/tools/: __init__.py  _stub.py  audit.py  boot.py  capability_floor.py  config.py  deploy.py  floor_cases.py  installer.py  sandbox.py  secrets.py  shipped_backends.json  smoke_floor.py  testrunner.py
py-1/tools/tests/: test_runtime.py
resources/: comment.md  langs-01.md  langs-02-future.md  langs-03-summary.md  web alternatives.md  web.md
