[project]
name = "NightForge-agent"
version = "0.1.0"
description = "Self-implementing agent seed (the agent edits this manifest via the install tool)."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

# The `install` tool pins new dependencies into the dependencies list above and
# the change rides the next deploy (test-gated + reproducible). The restricted
# set (installer/package-manager, off-PyPI index, VCS/URL/path) needs human
# approval — see app-concept-py.md -> Security -> Dependencies.
